example/lib/availability/x_Resource/Error/mock.ts
import { initMockNotifyComponent } from "./Notify/mock"

import { ErrorResource } from "./resource"

export function initMockErrorResource(): ErrorResource {
    return {
        notify: initMockNotifyComponent(),
    }
}
